# cpi-sync

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md
resources/: config-schema.json  config.schema.json
src/: config.rs  errors.rs  lib.rs  main.rs
