[package]
name = "cpi-sync"
version = "0.1.0"
authors = ["Fatih Pense"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

clap = "3.0.0-beta.2"
jsonschema = "0.5"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.13.0"
crossterm = "0.19.0"
rpassword = "5.0"
zip = "0.5"
bytes = "1.0.1"
regex = "1"
path-slash = "0.1.4"
path-absolutize = "3.0.6"
