[package]
name = "cpi-sync"
version = "0.3.3"
authors = ["Fatih Pense"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

clap = { version = "3.0.14", features = ["derive"] }
jsonschema = "0.15.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls-webpki-roots"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.13"
crossterm = "0.23"
rpassword = "5.0"
zip = "0.5"
bytes = "1.0.1"
regex = "1"
path-slash = "0.1.4"
path-absolutize = "3.0.6"
futures = "0.3"
remove_dir_all = "0.7"
thiserror = "1.0"
# rand = "0.8"
